--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "mapbox-gl": "3.9.4",
     "@mui/icons-material": "^6.4.2",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "3.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
