--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "mapbox": "^1.0.0-beta10",
-    "mapbox-gl": "3.9.4",
+    "mapbox-gl": "^3.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
