--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "axios": "^1.7.9",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^3.9.4",
     "react": "^18.3.1",
